--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,5 +1,5 @@
-@(name: String, lastName: String)
+@()
 
 @main("Welcome to Play") {
-  <h1>Welcome to Play @name @lastName !</h1>
+    <h1>Welcome to Play!</h1>
 }
